k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lara-app
  labels:
    tier: backend
spec:
  selector:
    app: laravel-app
    tier: backend
  ports:
    - protocol: TCP
      port: 8181
